# bettertotp

./: .gitignore  LICENSE  README.md  pyproject.toml
android/: gradlew  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/bettertotp/android/: BetterTOTPApp.kt  MainActivity.kt
android/app/src/main/java/com/bettertotp/android/totp/: CharsetEncoder.kt  TOTPGenerator.kt  TOTPVerifier.kt
android/app/src/main/java/com/bettertotp/android/ui/navigation/: NavGraph.kt
android/app/src/main/java/com/bettertotp/android/ui/screens/: AccountDetailScreen.kt  AddAccountScreen.kt  MainScreen.kt  SettingsScreen.kt  UnlockScreen.kt  WelcomeScreen.kt
android/app/src/main/java/com/bettertotp/android/ui/theme/: Theme.kt
android/app/src/main/java/com/bettertotp/android/util/: ClipboardHelper.kt  CryptoUtils.kt
android/app/src/main/java/com/bettertotp/android/vault/: Account.kt  BiometricVault.kt  PasswordVault.kt  Vault.kt  VaultFactory.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/gradle/: libs.versions.toml
btotp/: __init__.py  charset.py  cli.py  clipboard.py  config.py  core.py  qr.py  secret.py  uri.py  vault.py
linux/: README.md  btotp  btotp.spec  build.sh  gui.py  register-handler.sh
linux/assets/: bettertotp.desktop
linux/pam/: Makefile  README.md  pam_btotp.c
tests/: test_clipboard.py  test_config.py  test_core.py  test_uri.py  test_vault.py
web/: README.md  main.py  requirements.txt  schemas.py
